--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -1,19 +1,19 @@
 # Basics #
-API_ID =  # https://my.telegram.org
-API_HASH = "" # https://my.telegram.org
-BOT_TOKEN = ""
+API_ID =29438332  # https://my.telegram.org
+API_HASH = "2e89d022e5322b722049da453caa1644" # https://my.telegram.org
+BOT_TOKEN = "5748691290:AAFkyWBN2KJXGbOOwJihMuXYb1EIuIRPAY0"
 
 # Authorization # - List of id's, separated by space -
-OWNER_ID = 
-SUDO_USERS = ""
-EVERYONE_CHATS = ""
+OWNER_ID =6219213228
+
 
 # Log Channel #
-LOG_CHANNEL = 
+LOG_CHANNEL =1910181292
 
 # Database #
 SESSION_NAME = "encoderbot"
-MONGO_URI = ""
+MONGO_URI = "mongodb+srv://Rone:rone@cluster0.sln9j.mongodb.net/myFirstD
+atabase?retryWrites=true&w=majority"
 
 # Google Drive #
 INDEX_URL = ""
